Fixed author image centering issue on firefox

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -496,6 +496,8 @@ p {
     text-align: center;
     text-align: -webkit-center;
     justify-content: center;
+    align-items: center;
+    
 
     img {
       border-radius: 0.75em;
